--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -42,6 +42,7 @@
   doi={10.1111/1462-2920.12444},
   html={https://doi.org/10.1111/1462-2920.12444}}
 @article{10.1038/ismej.2014.2562015,
+  abbr={ISME J},
   title={Microbial dark matter ecogenomics reveals complex synergistic networks in a methanogenic bioreactor},
   author={M. K. Nobu and T. Narihiro and C. Rinke and Y. Kamagata and S. G. Tringe and T. Woyke and W. T. Liu},
   journal={ISME J},
@@ -98,6 +99,7 @@
   doi={10.1264/jsme2.ME16057},
   html={https://doi.org/10.1264/jsme2.ME16057}}
 @article{10.1038/ismej.2015.972016,
+  abbr={ISME J},
   title={Phylogeny and physiology of candidate phylum 'Atribacteria' (OP9/JS1) inferred from cultivation-independent genomics},
   author={M. K. Nobu and J. A. Dodsworth and S. K. Murugapiran and C. Rinke and E. A. Gies and G. Webster and P. Schwientek and P. Kille and R. J. Parkes and H. Sass and B. B. Jorgensen and A. J. Weightman and W. T. Liu and S. J. Hallam and G. Tsiamis and T. Woyke and B. P. Hedlund},
   journal={ISME J},
@@ -106,6 +108,7 @@
   doi={10.1038/ismej.2015.97},
   html={https://doi.org/10.1038/ismej.2015.97}}
 @article{10.1038/ismej.2016.332016,
+  abbr={ISME J},
   title={Chasing the elusive Euryarchaeota class WSA2: genomes reveal a uniquely fastidious methyl-reducing methanogen},
   author={M. K. Nobu and T. Narihiro and K. Kuroda and R. Mei and W. T. Liu},
   journal={ISME J},
@@ -114,6 +117,7 @@
   doi={10.1038/ismej.2016.33},
   html={https://doi.org/10.1038/ismej.2016.33}}
 @article{10.1038/s41467-017-01376-92017,
+  abbr={Nat Comm},
   title={Diverse Marinimicrobia bacteria may mediate coupled biogeochemical cycles along eco-thermodynamic gradients},
   author={A. K. Hawley and M. K. Nobu and J. J. Wright and W. E. Durno and C. Morgan-Lang and B. Sage and P. Schwientek and B. K. Swan and C. Rinke and M. Torres-Beltran and K. Mewis and W. T. Liu and R. Stepanauskas and T. Woyke and S. J. Hallam},
   journal={Nat Commun},
@@ -274,20 +278,24 @@
   doi={10.1007/s11356-019-06705-7},
   html={https://doi.org/10.1007/s11356-019-06705-7}}
 @article{10.1038/s41586-019-1916-62020,
+  abbr={Nature},
   title={Isolation of an archaeon at the prokaryote-eukaryote interface},
   author={H. Imachi and M. K. Nobu and N. Nakahara and Y. Morono and M. Ogawara and Y. Takaki and Y. Takano and K. Uematsu and T. Ikuta and M. Ito and Y. Matsui and M. Miyazaki and K. Murata and Y. Saito and S. Sakai and C. Song and E. Tasumi and Y. Yamanaka and T. Yamaguchi and Y. Kamagata and H. Tamaki and K. Takai},
   journal={Nature},
   volume={577},
   year={2020},
   doi={10.1038/s41586-019-1916-6},
+  selected={true},
   html={https://doi.org/10.1038/s41586-019-1916-6}}
 @article{10.1038/s41467-020-20149-52020,
+  abbr={Nat Comm},
   title={Isolation of a member of the candidate phylum 'Atribacteria' reveals a unique cell membrane structure},
   author={T. Katayama and M. K. Nobu and H. Kusada and X. Y. Meng and N. Hosogi and K. Uematsu and H. Yoshioka and Y. Kamagata and H. Tamaki},
   journal={Nat Commun},
   volume={11},
   year={2020},
   doi={10.1038/s41467-020-20149-5},
+  selected={true},
   html={https://doi.org/10.1038/s41467-020-20149-5}}
 @article{10.1128/mBio.00408-202020,
   title={Deep Sequencing Uncovers Caste-Associated Diversity of Symbionts in the Social Ant Camponotus japonicus},
@@ -346,6 +354,7 @@
   doi={10.1186/s40168-020-00885-y},
   html={https://doi.org/10.1186/s40168-020-00885-y}}
 @article{10.1038/s41559-020-1125-62020,
+  abbr={Nat Eco Evo},
   title={A hydrogen-dependent geochemical analogue of primordial carbon and energy metabolism},
   author={M. Preiner and K. Igarashi and K. B. Muchowska and M. Yu and S. J. Varma and K. Kleinermanns and M. K. Nobu and Y. Kamagata and H. Tuysuz and J. Moran and W. F. Martin},
   journal={Nat Ecol Evol},
@@ -362,6 +371,7 @@
   doi={10.1016/j.jbiosc.2019.10.006},
   html={https://doi.org/10.1016/j.jbiosc.2019.10.006}}
 @article{10.1038/s41396-021-01025-62021,
+  abbr={ISME J},
   title={Methanogenic archaea use a bacteria-like methyltransferase system to demethoxylate aromatic compounds},
   author={J. M. Kurth and M. K. Nobu and H. Tamaki and N. de Jonge and S. Berger and M. S. M. Jetten and K. Yamamoto and D. Mayumi and S. Sakata and L. Bai and L. Cheng and J. L. Nielsen and Y. Kamagata and T. Wagner and C. U. Welte},
   journal={ISME J},
@@ -378,6 +388,7 @@
   doi={10.1016/j.syapm.2020.126154},
   html={https://doi.org/10.1016/j.syapm.2020.126154}}
 @article{10.1038/s41596-022-00735-12022,
+  abbr={Nat Protoc},
   title={Cultivation of previously uncultured microorganisms with a continuous-flow down-flow hanging sponge (DHS) bioreactor, using a syntrophic archaeon culture obtained from deep marine sediment as a case study},
   author={H. Imachi and M. K. Nobu and M. Miyazaki and E. Tasumi and Y. Saito and S. Sakai and M. Ogawara and A. Ohashi and K. Takai},
   journal={Nat Protoc},
@@ -410,35 +421,43 @@
   doi={10.1128/mbio.01711-22},
   html={https://doi.org/10.1128/mbio.01711-22}}
 @article{10.1038/s41396-023-01538-22023,
+  abbr={ISME J},
   title={Identification and cultivation of anaerobic bacterial scavengers of dead cells},
   author={Y. Hirakata and R. Mei and K. Morinaga and T. Katayama and H. Tamaki and X. Y. Meng and T. Watari and T. Yamaguchi and M. Hatamoto and M. K. Nobu},
   journal={ISME J},
   volume={17},
   year={2023},
   doi={10.1038/s41396-023-01538-2},
+  selected={true},
   html={https://doi.org/10.1038/s41396-023-01538-2}}
 @article{10.1093/pnasnexus/pgad0232023,
+  abbr={PNAS Nexus},
   title={The origin and evolution of methanogenesis and Archaea are intertwined},
   author={R. Mei and M. Kaneko and H. Imachi and M. K. Nobu},
   journal={PNAS Nexus},
   volume={2},
   year={2023},
   doi={10.1093/pnasnexus/pgad023},
+  selected={true},
   html={https://doi.org/10.1093/pnasnexus/pgad023}}
 @article{10.1038/s41396-022-01197-92023,
+  abbr={ISME J},
   title={Unique H(2)-utilizing lithotrophy in serpentinite-hosted systems},
   author={M. K. Nobu and R. Nakai and S. Tamazawa and H. Mori and A. Toyoda and A. Ijiri and S. Suzuki and K. Kurokawa and Y. Kamagata and H. Tamaki},
   journal={ISME J},
   volume={17},
   year={2023},
   doi={10.1038/s41396-022-01197-9},
+  selected={true},
   html={https://doi.org/10.1038/s41396-022-01197-9}}
 @article{10.1038/s41564-024-01717-72024,
+  abbr={Nat Micro},
   title={A Marine Group A isolate relies on other growing bacteria for cell wall formation},
   author={T. Katayama and M. K. Nobu and H. Imachi and N. Hosogi and X. Y. Meng and K. Morinaga and H. Yoshioka and H. A. Takahashi and Y. Kamagata and H. Tamaki},
   journal={Nat Microbiol},
-    year={2024},
+  year={2024},
   doi={10.1038/s41564-024-01717-7},
+  selected={true},
   html={https://doi.org/10.1038/s41564-024-01717-7}}
 @article{10.1128/mbio.03102-232024,
   title={Microscopic and metatranscriptomic analyses revealed unique cross-domain parasitism between phylum Candidatus Patescibacteria/candidate phyla radiation and methanogenic archaea in anaerobic ecosystems},
@@ -449,12 +468,14 @@
   doi={10.1128/mbio.03102-23},
   html={https://doi.org/10.1128/mbio.03102-23}}
 @article{10.1073/pnas.23221201212024,
+  abbr={PNAS},
   title={Illuminating the coevolution of photosynthesis and Bacteria},
   author={A. Nishihara and Y. Tsukatani and C. Azai and M. K. Nobu},
   journal={Proc Natl Acad Sci U S A},
   volume={121},
   year={2024},
   doi={10.1073/pnas.2322120121},
+  selected={true},
   html={https://doi.org/10.1073/pnas.2322120121}}
 
 @string{aps = {American Physical Society,}}
